apps/staging/calibre-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
    namespace: traefik-gateway
    kind: Gateway
  - name: traefik-gateway
    sectionName: https
    namespace: traefik-gateway
    kind: Gateway
  hostnames:
  - calibre.robertharte.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: calibre
      port: 8083
